Fix truncate

--- a/frontend/src/Cms/CommentWidget/CommentWidget.scss
+++ b/frontend/src/Cms/CommentWidget/CommentWidget.scss
@@ -39,13 +39,14 @@
 
   .excerpt {
     width: 100%;
+
     .md-title {
       font-size: 14px;
-      margin: 5px 0;
+      margin: 5px 0 0;
     }
     .comment-info {
       display: block;
-      margin: 5px 0 10px;
+      margin: 0 0 5px;
 
       .time {
         position: relative;
